--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "oclock",
+  "author": "Lahouali",
   "license": "ISC"
 }
